# exprparse

./: .gitignore  LICENSE  Readme.md
.github/workflows/: ci.yml
src/: .clang-format  CMakeLists.txt  exprparse.cpp  exprparse.h  main.cpp
src/exprcalc/: CMakeLists.txt  exprcalc.cpp
src/exprparse/: CMakeLists.txt  exprparse.cpp  exprparse.h
src/tests/: CMakeLists.txt  exprtests.cpp  exprtests.h  main.cpp
